2002-05-23  Martin Vidner  <mvidner@suse.cz>

	* man/yptest.8.in: Fix some typos

2002-05-13  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.7

	* src/yptest.c: Implement -q option.
	* man/yptest.8.in: Document all options.

	* man/ypset.8.in: Fix nroff syntax error.

	* man/yppasswd.1: Fix typo in yppasswd option.

	* configure.in: Add option to let yppasswd call passwd/chfn/chsh
	for changing user informations.

	* src/yppasswd.c (main): trucante password aging informations from
	the password field before comparing it (Patch from
	Alex Larsson <alexl@redhat.com>)

	* configure.in: Add options for cracklib support, fixes for new
	autoconf, prefer libxcrypt before libcrypt.
	* src/yppasswd.c: Fix cracklib support.
	* src/Makefile.am: Link yppasswdd against cracklib if supported.

2002-05-13  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add m4.
	(SUBDIRS): Remove intl.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): New variable.
	* configure.in (AC_OUTPUT): Add m4/Makefile.

2001-12-09  Thorsten Kukuk  <kukuk@suse.de>

	* src/Makefile.am (sbin_PROGRAMS): Add yptest
	* src/yptest.c: New file.
	* man/Makefile.am: Add manual page for yptest
	* man/yptest.8.in: New file.
	* configure.in: Create man/yptest.8

2001-12-08  Thorsten Kukuk  <kukuk@suse.de>

	* configure.in: Create manual pages in man directory.
	* man/Makefile.am: Remove old rules to create manual pages.

	* man/ypset.8.in: Allow only GPL version 2, rename PK_VERSION to
	VERSION.
	* man/domainname.8.in: Likewise.
	* man/nicknames.5.in: Likewise.
	* man/ypmatch.1.in: Likewise.
	* man/yppasswd.1.in: Likewise.
	* man/yppoll.8.in: Likewise.
	* man/ypwhich.1.in: Likewise.
	* man/ypcat.1.in: Likewise, also add description of -h option.

	* src/ypcat.c: Implement -h option (query specific host)

	* src/ypset.c: Allow only GPL version 2.
	* src/ypwhich.c: Likewise.
	* src/yppoll.c: Likewise.
	* src/yppasswd_xdr.c: Likewise.
	* src/ypmatch.c: Likewise.
	* src/ypcat.c: Likewise.