@@ -7,5 +7,6 @@ Richard Gooch 			Richard.Gooch@atnf.csiro.au
 Loic Prylli			Loic.Prylli@ens-lyon.fr
 Klaus Steinberger		Klaus.Steinberger@Physik.Uni-Muenchen.DE
 Raymond Wu         		rwu@ml.com
-Martin Vidner			<mvidner@suse.cz>
+Martin Vidner			mvidner@suse.cz
+Peter Breitenlohner		peb@mppmu.mpg.de
 
