@@ -1,3 +1,8 @@
+2002-05-30  Thorsten Kukuk  <kukuk@suse.de>
+
+	* src/yppasswd.c (main): Make sure strings are NUL terminated
+	after strncpy. Reported by Peter Breitenlohner <peb@mppmu.mpg.de>.
+
 2002-05-23  Martin Vidner  <mvidner@suse.cz>
 
 	* man/yptest.8.in: Fix some typos
